; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-timer.c_property_get_next_elapse_monotonic.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-timer.c_property_get_next_elapse_monotonic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"t\00", align 1
@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, i8*, i8*, i8*, %struct.TYPE_9__*, i8*, i32*)* @property_get_next_elapse_monotonic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_next_elapse_monotonic(%struct.TYPE_9__* %0, i8* %1, i8* %2, i8* %3, %struct.TYPE_9__* %4, i8* %5, i32* %6) #0 {
  %8 = alloca %struct.TYPE_9__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.TYPE_9__*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store %struct.TYPE_9__* %4, %struct.TYPE_9__** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i8*, i8** %13, align 8
  %17 = bitcast i8* %16 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %17, %struct.TYPE_9__** %15, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %19 = call i32 @assert(%struct.TYPE_9__* %18)
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %21 = call i32 @assert(%struct.TYPE_9__* %20)
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %23 = call i32 @assert(%struct.TYPE_9__* %22)
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %29 = call i32 @TIMER_MONOTONIC_CLOCK(%struct.TYPE_9__* %28)
  %30 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %31 = call i64 @usec_shift_clock(i32 %27, i32 %29, i32 %30)
  %32 = trunc i64 %31 to i32
  %33 = call i32 @sd_bus_message_append(%struct.TYPE_9__* %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %32)
  ret i32 %33
}

declare dso_local i32 @assert(%struct.TYPE_9__*) #1

declare dso_local i32 @sd_bus_message_append(%struct.TYPE_9__*, i8*, i32) #1

declare dso_local i64 @usec_shift_clock(i32, i32, i32) #1

declare dso_local i32 @TIMER_MONOTONIC_CLOCK(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
